--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,12 @@ inputs:
 runs:
     using: "composite"
     steps:
+      - name: Install Salesforce CLI
+        run: |
+          npm install --global @salesforce/cli
+          sf --version
+        shell: bash
+
       - name: Authenticate to Org
         run: |
           echo '${{ inputs.auth-url }}' > auth_file
